--- a/public/lahetus.html
+++ b/public/lahetus.html
@@ -28,7 +28,7 @@
 			<nav class="navbar-default navbar-static-side" role="navigation">
 				<div class="sidebar-collapse">
 					<ul class="nav" id="side-menu">
-						<li class="nav-header voremodulatsioon">
+						<li class="nav-header">
 							<div class="dropdown profile-element"> 			<span>
 								<a href="#" class="cr-block"><div id="logo-minimal-w" class="center-block"></div></a>
 								</span>
@@ -39,12 +39,9 @@
 						</li>
 						<!--_____________ SIDEBAR SEARCH _______________-->
 						<li>
-							<form class="sidebar-search" role="search">
-								<div class="input-group">
-									<input type="text" class="form-control" placeholder="Otsi midagi..." name="srch-term" id="srch-term">
-									<div class="input-group-btn">
-										<button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-									</div>
+							<form class="sidebar-search center-block" role="search">
+								<div class="input-group m-b">
+									<input type="text" class="form-control" placeholder="&#xF002; Otsi" name="srch-term2" id="srch-term2" style="font-family:Arial, FontAwesome">
 								</div>
 							</form>
 						</li>
@@ -134,7 +131,7 @@
 				<div class="row border-bottom">
 					<nav class="navbar navbar-static-top cherry-bg" role="navigation">
 						<div class="navbar-header">
-							<a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+							<a class="navbar-minimalize minimalize-styl-2" href="#"><i class="fa fa-bars"></i> </a>
 
 							<ul class="nav navbar-nav">
 								<li class="dropdown">
@@ -244,7 +241,8 @@
 													<li class="level-3"><a href="#">TTÜ põhikirja ülevaade</a></li>
 													<li class="level-3"><a href="#">TTÜ põhikirja kriitika</a></li>
 												</div>
-											</ul></li>
+											</ul>
+											</li>
 										<li class="col-sm-4">
 											<ul>
 												<li class="level-1 dropdown-header"><a href="#">Terviktekstid, vormid</a></li>
@@ -353,9 +351,10 @@
 							---------------------------------------------------------->
 							<!--NAVBAR SEARCH
 							---------------------------------------------------------->
-							<ul class="nav navbar-top-links navbar-right visible-md visible-lg">
+							<ul class="nav navbar-top-links navbar-right visible-lg">
 								<form>
-									<input type="text" class="form-control" placeholder="&#xF002; Otsi midagi..." name="srch-term" id="srch-term" style="font-family:Arial, FontAwesome"></form>
+									<input type="text" class="form-control" placeholder="&#xF002; Otsi" name="srch-term" id="srch-term" style="font-family:Arial, FontAwesome">
+									</form>
 							</ul>
 							<!--NAVBAR SEARCH END
 							---------------------------------------------------------->
