--- a/public/login.html
+++ b/public/login.html
@@ -9,13 +9,13 @@
 	<title>auth.ttu.ee</title>
 
 	<link href="https://static.ttu.ee/auth/css/1.1/bootstrap.min.css" rel="stylesheet">
-	<link href="https://auth-test.ttu.ee/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+	<link href="css/font-awesome.min.css" rel="stylesheet" />
 	<link href="https://static.ttu.ee/auth/css/1.1/animate.min.css" rel="stylesheet">
 	<link href="https://static.ttu.ee/auth/css/1.1/toastr.min.css" rel="stylesheet"/>
 	<link href="https://auth-test.ttu.ee/css/1.1/style.css" rel="stylesheet">
    <!--[if lt IE 9]>
 <script src="https://auth-test.ttu.ee/js/1.1/html5shiv.min.js"></script>
-<script src="https://auth-test.ttu.ee/js/1.1/respond.min.js"></script>
+<script src="https://auth-test.ttu.ee/js/1.1/respond.js"></script>
 <![endif]-->
     </head>
 
@@ -44,7 +44,7 @@
 		</div>
 	    </div>
 
-            <form method="post" action="/login/et/portal-dev">
+            <form action="index.html">
                 <div id="login-content-wrapper">
                     <div id="login-content-uni-id" class="hidden">
                         <div class="form-group"><input type="text" name="uname" maxlength="32" autocomplete="off" class="form-control" placeholder="Uni-ID kasutajatunnus"></div>
@@ -125,14 +125,14 @@ Probleemide korral sisselogimisel palun anda sellest viivitamatult teada IT kasu
 
 	<script src="https://auth-test.ttu.ee/js/1.1/jquery-1.11.3.min.js"></script>
 	<script src="https://static.ttu.ee/auth/js/1.1/bootstrap.min.js"></script>
-<!-- 	<script src="https://static.ttu.ee/auth/js/1.1/better-dom.js"></script>
-	 --><script src="https://static.ttu.ee/auth/js/1.1/better-placeholder-polyfill.js"></script>
+
 	<script src="https://static.ttu.ee/auth/js/1.1/toastr.min.js"></script>
 	<script src="https://auth-test.ttu.ee/js/1.1/login_scripts.js"></script>
-
+        <script src="https://auth-test.ttu.ee/js/1.1/jquery.placeholder.js"></script>
 
         <script type="text/javascript">
             (toastr).success('work in progress...');
+
         </script>
     </body>
 </html>
