--- a/public/lahetus.html
+++ b/public/lahetus.html
@@ -430,12 +430,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="350€" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="350€" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right"><span>Selgitus </span></div>
 							<div class="col-xs-6 m-b-xs">
-								<a href="#" id="daily-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, iure sapiente sint ut quod eligendi earum inventore odit natus voluptas, soluta rem dolorum possimus. Quaerat sapiente sunt perferendis obcaecati aliquid." data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="daily-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem, iure sapiente sint ut quod eligendi earum inventore odit natus voluptas, soluta rem dolorum possimus. Quaerat sapiente sunt perferendis obcaecati aliquid." data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -452,12 +452,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="travel-cost" data-type="text" data-pk="1" data-value="452€" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="travel-cost" data-type="text" data-pk="1" data-value="452€" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right"><span>Selgitus </span></div>
 							<div class="col-xs-6  m-b-xs">
-								<a href="#" id="travel-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, consequatur, rem! Voluptates nesciunt iure esse illo, ipsam qui, perspiciatis nihil!" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="travel-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, consequatur, rem! Voluptates nesciunt iure esse illo, ipsam qui, perspiciatis nihil!" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -473,12 +473,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="text" data-pk="1" data-value="1240€" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="text" data-pk="1" data-value="1240€" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right"><span>Selgitus </span></div>
 							<div class="col-xs-6  m-b-xs">
-								<a href="#" id="accomodation-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, tempora hic ducimus doloribus! Magni doloremque atque non voluptate temporibus ab quas excepturi rem, itaque inventore eveniet sequi, eaque fugit architecto, omnis voluptas possimus nisi iure eum placeat rerum corrupti quibusdam commodi ipsum nostrum. Eligendi recusandae esse sint, ullam maiores voluptates tempore quam mollitia expedita, delectus dolor nam excepturi omnis labore!" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="accomodation-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, tempora hic ducimus doloribus! Magni doloremque atque non voluptate temporibus ab quas excepturi rem, itaque inventore eveniet sequi, eaque fugit architecto, omnis voluptas possimus nisi iure eum placeat rerum corrupti quibusdam commodi ipsum nostrum. Eligendi recusandae esse sint, ullam maiores voluptates tempore quam mollitia expedita, delectus dolor nam excepturi omnis labore!" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -494,12 +494,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="other-cost" data-type="text" data-pk="1" data-value="77€" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="other-cost" data-type="text" data-pk="1" data-value="77€" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right"><span>Selgitus </span></div>
 							<div class="col-xs-6 m-b-xs">
-								<a href="#" id="other-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptatem iste eos vitae necessitatibus, ratione veniam itaque. Nulla quos voluptatum rem natus animi esse tempore voluptate, blanditiis saepe at, eum?" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="other-cost-comment" data-type="textarea" data-pk="1" data-value="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil voluptatem iste eos vitae necessitatibus, ratione veniam itaque. Nulla quos voluptatum rem natus animi esse tempore voluptate, blanditiis saepe at, eum?" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -515,7 +515,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Kokku</div><div class="col-xs-6 m-b"><a href="#" id="total-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;">2042€</a></div>
+							<div class="col-xs-6 text-right">Kokku</div><div class="col-xs-6 m-b"><a href="#" id="total-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" >2042€</a></div>
 						</div>
 
 						<div class="row">
