--- a/public/lahetus_lisa_uus.html
+++ b/public/lahetus_lisa_uus.html
@@ -430,12 +430,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="daily-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Selgitus </span></div>
 							<div class="col-xs-6">
-								<a href="#" id="daily-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="daily-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -452,12 +452,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="travel-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="travel-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Selgitus </span></div>
 							<div class="col-xs-6 m-b-xs">
-								<a href="#" id="travel-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="travel-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -473,12 +473,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="accomodation-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Selgitus </span></div>
 							<div class="col-xs-6">
-								<a href="#" id="accomodation-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="accomodation-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -494,12 +494,12 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Summa</span></div>
-							<div class="col-xs-6"><a href="#" id="other-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6"><a href="#" id="other-cost" data-type="text" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs"><span>Selgitus </span></div>
 							<div class="col-xs-6 m-b-xs">
-								<a href="#" id="other-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a>
+								<a href="#" id="other-cost-comment" data-type="textarea" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a>
 							</div>
 						</div>
 						<div class="row">
@@ -515,7 +515,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Kokku</div><div class="col-xs-6 m-b"><a href="#" id="total-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" style="color: gray; display: inline;"></a></div>
+							<div class="col-xs-6 text-right">Kokku</div><div class="col-xs-6 m-b"><a href="#" id="total-cost" data-type="select" data-pk="1" data-value="" data-title="Select sex" class="editable editable-click" ></a></div>
 						</div>
 
 						<div class="row">
