--- a/public/lahetus_aruanne.html
+++ b/public/lahetus_aruanne.html
@@ -378,21 +378,26 @@
 					<!--1ST BLOCK ERRAND FORM
 --------------------------------------------------------------->
 					<div>
-						<div class="row"><div class="col-sm- text-center font-bold m-b-xs">Üldandmed</div></div>
 						<div class="row">
-							<div class="col-xs-6 text-right m-b-xs">Lähetatu nimi</div><div class="col-xs-6"><a href="#" id="name" data-type="text" data-pk="1" data-url="/post">Peeter Kuusk</a></div>
+						<div class="col-sm- text-center font-bold m-b-xs">Töölähetuse aruanne</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right m-b-xs">Struktuuriüksus</div><div class="col-xs-6"><a href="#" id="department" data-type="text" data-pk="1" data-url="/post">Tarkvara osakond</a></div>
+							<div class="col-xs-6 text-right m-b-xs">Lähetuskorralduse nr</div><div class="col-xs-6"><a href="#" id="errand-nr" data-type="text" data-pk="1" data-url="/post">77654</a></div>
+						</div>
+						<div class="row">
+							<div class="col-xs-6 text-right m-b-xs">Kuupäev</div><div class="col-xs-6"><a href="#" id="errand_date" data-type="combodate" data-value="2015-12-09" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select date" class="editable editable-click"></a></div>
+						</div>
+						<div class="row">
+							<div class="col-xs-6 text-right m-b-xs">Lähetatu nimi</div><div class="col-xs-6"><a href="#" id="name" data-type="text" data-pk="1" data-url="/post">Peeter Kuusk</a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right m-b-xs">Amet</div><div class="col-xs-6"><a href="#" id="position" data-type="text" data-pk="1" data-url="/post">Arendusjuht</a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right m-b-xs">Lähetuse kestus</div><div class="col-xs-6"><a href="#" id="errand_duration_b" data-type="combodate" data-value="2015-12-09" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click"></a> - <a href="#" id="errand_duration_e" data-type="combodate" data-value="2015-12-16" data-format="YYYY-MM-DD" data-viewformat="DD/MM/YYYY" data-template="D / MMM / YYYY" data-pk="1" data-original-title="Select Date of birth" class="editable editable-click"></a></div>
+							<div class="col-xs-6 text-right m-b-xs">Struktuuriüksus</div><div class="col-xs-6"><a href="#" id="department" data-type="text" data-pk="1" data-url="/post">Tarkvara osakond</a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right">Finantseerimise allikad</div><div class="col-xs-6"><a href="#" id="financing" data-type="text" data-value="NATO" data-pk="1" data-url="/post" data-placeholder="Puuduvad"></a></div>
+							<div class="col-xs-6 text-right m-b-xs">Finantsallikas</div><div class="col-xs-6"><a href="#" id="funding-source" data-type="text" data-pk="1" data-url="/post">Lorem ipsum dolor</a></div>
 						</div>
 					</div>
 					<!--1ST BLOCK ERRAND FORM END
@@ -409,7 +414,7 @@
 							<div class="col-xs-6 text-right m-b-xs">Organisatsioon</div><div class="col-xs-6"><a href="#" id="organization" data-type="text" data-value="MSG-117" data-pk="1" data-url="/post"></a></div>
 						</div>
 						<div class="row">
-							<div class="col-xs-6 text-right m-b-xs">Lähetuse eesmärk</div><div class="col-xs-6"><a href="#" id="errand-goal" data-type="select" data-value="9" data-pk="1" data-url="/post"></a></div>
+							<div class="col-xs-6 text-right m-b-xs">Lähetuse eesmärk</div><div class="col-xs-6"><a href="#" id="errand_goal" data-type="text" data-value="MSG-117 töögrupi 8's kogunemine" data-pk="1" data-url="/post"></a></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-6 text-right">Sõiduvahend</div><div class="col-xs-6"><a href="#" id="transportation" data-type="checklist" data-title="Select transportation" data-value="1,2,4" class="editable editable-click" data-original-title="" title=""><br><br></a></div>
