blank page for new views

--- a/public/tyhi.html
+++ b/public/tyhi.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<title>TTÜ | Lähetused</title>
+		<title>TTÜ | Katsetused</title>
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -376,9 +376,34 @@
 --------------------------------------------------------------->
 				<div class="wrapper wrapper-content animated fadeInRight" style="font-size: 1.3em">
 
-				<!--PAGE END
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+					<!--PAGE END
 ----------------------------------------------------------------->
-				<!--MODAL CONTENT
+					<!--MODAL CONTENT
 --------------------------------------------------------------->
 					<div id="right-sidebar" class="">
 						<div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 100%;">
@@ -581,37 +606,31 @@
 				</div>
 				<!--PAGE END
 --------------------------------------------------------------->
-					<!--FOOTER
+				<!--FOOTER
 --------------------------------------------------------------->
-					<div class="footer">
-						<div class="pull-right">
-							TTÜ Siseportaal &copy; 2014 - 2015
-						</div>
+				<div class="footer">
+					<div class="pull-right">
+						TTÜ Siseportaal &copy; 2014 - 2015
 					</div>
-				<!--SCRIPTS
---------------------------------------------------------------->
-				<!-- Main scripts -->
-				<script src="js/jquery-2.1.1.js"></script>
-				<script src="js/bootstrap.min.js"></script>
-				<!-- Plugin javascript -->
-				<script src="js/plugins/moment/moment.min.js"></script>
-				<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-				<script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-				<script src="js/inspinia.js"></script>
-				<script src="js/plugins/pace/pace.min.js"></script>
-				<script src="js/plugins/datapicker/bootstrap-datepicker.js"></script>
-				<script src="js/plugins/x-editable/bootstrap-editable.js"></script>
-				<script src="js/plugins/iCheck/icheck.min.js"></script>
-				<script src="js/plugins/switchery/switchery.min.js"></script>
-				<!-- Custom javascript -->
-				<script src="js/navbar_menu.js"></script>
-				<script src="js/lahetus.js"></script>
-				<script src="js/sidebar.js"></script>
-
+				</div>
 			</div>
 			<!--CONTENT END
 --------------------------------------------------------------->
 		</div>
+		<!--SCRIPTS
+--------------------------------------------------------------->
+		<!-- Main scripts -->
+		<script src="js/jquery-2.1.1.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Plugin javascript -->
+		<script src="js/plugins/moment/moment.min.js"></script>
+		<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+		<script src="js/plugins/slimscroll/jquery.slimscroll.js"></script>
+		<script src="js/inspinia.js"></script>
+		<script src="js/plugins/pace/pace.min.js"></script>
+
+		<!-- Custom javascript -->
+		<script src="js/content_pages.js"></script>
 	</body>
 
 </html>
